--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "React"
   ],
   "author": "ShanCaiJangzi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/classnames": "^2.3.1",
+    "classnames": "^2.3.2"
+  }
 }
